--- a/index.html
+++ b/index.html
@@ -18,6 +18,43 @@
       --shadow-hover: 0 6px 12px rgba(0, 0, 0, 0.2);
       --glow: 0 0 10px rgba(255, 255, 255, 0.8);
     }
+    /* Preloader Styles */
+    #preloader {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: 'Courier New', Courier, monospace;
+      font-size: 2rem;
+      z-index: 1000;
+      opacity: 1;
+      transition: opacity 1s ease-in-out;
+    }
+
+    #preloader.hidden {
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    #preloader-text {
+      white-space: nowrap;
+      overflow: hidden;
+      color: green;
+      border-right: 2px solid black;
+      
+
+    
+    }
+
+    @keyframes blink-caret {
+      from, to { border-color: transparent; }
+      50% { border-color: black; }
+    }
 
     * {
       margin: 0;
@@ -391,6 +428,12 @@
   </style>
 </head>
 <body>
+    <!-- Preloader -->
+  <div id="preloader">
+    <div id="preloader-text"></div>
+  </div>
+
+  <!-- Main Content -->
   <div class="container">
     <!-- Tab Buttons -->
     <div class="tab-buttons">
@@ -524,6 +567,37 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.24/jspdf.plugin.autotable.min.js"></script>
   <script>
     const { jsPDF } = window.jspdf;
+
+    // Preloader Logic
+    const preloader = document.getElementById('preloader');
+    const preloaderText = document.getElementById('preloader-text');
+
+    function typeText(text, speed, callback) {
+      let index = 0;
+      const interval = setInterval(() => {
+        if (index < text.length) {
+          preloaderText.textContent += text[index];
+          index++;
+        } else {
+          clearInterval(interval);
+          if (callback) callback();
+        }
+      }, 300);
+    }
+
+    function runPreloader() {
+      typeText("Hello, World", 1000, () => {
+        setTimeout(() => {
+          typeText("......", 2000, () => {
+            setTimeout(() => {
+              preloader.classList.add('hidden'); // Fade out the preloader
+            }, 2000); // Wait 1 second before fading out
+          });
+        }, 1000); // Wait 0.5 seconds before typing "......"
+      });
+    }
+
+    runPreloader();
 
     // Main Page Logic
     const panelSelect = document.getElementById('panel-select');
