--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       border-radius: 30px;
       box-shadow: var(--shadow);
       overflow: auto;
-      height: 3000px;
+      height: 2300px;
     }
 
     .tab-buttons {
@@ -429,8 +429,8 @@
 
     /* Help Button */
     .help-button {
-      position: absolute; /* Changed from fixed to absolute */
-      bottom: 2000px; /* Distance from the bottom */
+      position: fixed; /* Changed from fixed to absolute */
+      bottom: 100px; /* Distance from the bottom */
       left: 20px; /* Distance from the left */
       width: 40px; /* Fixed width */
       height: 40px; /* Fixed height */
